--- a/src/App.module.css
+++ b/src/App.module.css
@@ -61,7 +61,12 @@
 }
 
 @media only screen and (max-width: 500px ){
-    .subtitle {
-        width: 85vw;
+    .title {
+        font-size: 2rem;
     }
+    .subtitle,
+    .searchBar {
+        width: 85%;
+    }
+    
 }
