--- a/src/components/Recipe.module.css
+++ b/src/components/Recipe.module.css
@@ -48,9 +48,13 @@ a {
 
 @media only screen and (max-width: 500px ){
     .recipe {
+        padding: 0.7rem;
         width: 85vw;
     }
     .ingredientsList {
         padding: 10px;
+    }
+    .ingredientsList {
+        padding: 5px;
     }
 }
